--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,11 @@
 {
-  "extends": [
-    "config:base"
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": [
+		"config:best-practices",
+		"group:allNonMajor"
+	],
+	"dependencyDashboard": true,
+	"schedule": [
+		"every weekend"
+	]
 }
